--- a/hakyll-citeproc-example.cabal
+++ b/hakyll-citeproc-example.cabal
@@ -1,11 +1,10 @@
-name:               hakyll-citeproc-example
-version:            0.1.0.0
-build-type:         Simple
-cabal-version:      >= 1.10
+Name:               hakyll-citeproc-example
+Version:            0.1.0.0
+Build-type:         Simple
+Cabal-version:      >= 1.10
 
-executable site
-  main-is:          site.hs
-  build-depends:    base == 4.*
-                  , hakyll == 4.12.*
-  ghc-options:      -threaded
-  default-language: Haskell2010
+Executable site
+  Main-is:          site.lhs
+  Build-depends:    base == 4.*, hakyll == 4.12.*
+  Ghc-options:      -threaded -Wall
+  Default-language: Haskell2010
